fix text-wrap longer translation

--- a/src/app/v2/screens/app-info-screen/app-info-screen.component.scss
+++ b/src/app/v2/screens/app-info-screen/app-info-screen.component.scss
@@ -14,6 +14,7 @@ ion-content {
             font-size: 24px;
             color: white;
             height: auto;
+            white-space: normal;
             margin-bottom: 40px;
             --background-activated: transparent;
             --box-shadow: none;
